docs/api/graphql/v1/operations/mutations/remove-service-account-from-group.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: remove-service-account-from-group
title: removeServiceAccountFromGroup
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};








Remove a service account from a group.

The service account immediately loses all permissions granted by this group. If this was
its only group, the service account retains its identity but has no access to any resources.
Requires `organization_admin` permissions.


```graphql
removeServiceAccountFromGroup(
  organizationId: ID!
  serviceAccountId: ID!
  groupId: ID!
): ServiceAccountGroupPayload
```




### Arguments

#### [<code style={{ fontWeight: 'normal' }}>removeServiceAccountFromGroup.<b>organizationId</b></code>](#organization-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#organization-id\} 
Your organization's unique identifier.


#### [<code style={{ fontWeight: 'normal' }}>removeServiceAccountFromGroup.<b>serviceAccountId</b></code>](#service-account-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#service-account-id\} 
The service account to remove.


#### [<code style={{ fontWeight: 'normal' }}>removeServiceAccountFromGroup.<b>groupId</b></code>](#group-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#group-id\} 
The group to remove the service account from.


### Type

#### [<code style={{ fontWeight: 'normal' }}><b>ServiceAccountGroupPayload</b></code>](/api/graphql/v1/types/objects/service-account-group-payload.mdx) <Badge class="badge badge--secondary " text="object"/>